# agent_society

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN.md  README.md  folder_structure.md  pyproject.toml  ruff.toml  society_and_map.md
.claude/: settings.local.json
configs/: default.yaml  mvp_scenario.yaml
docs/research/: 00_overview.md  01_agent_society.md  04_local_llm_hardware.md
docs/research/LEE & Cho/: 02_quest_generation.md  03_event_generator.md
docs/research/보조/: 04_local_llm_hardware.md  references.md
scripts/: demo_pieces.py  demo_procedural.py  generate_replay.py  run_sim.py
src/agent_society/: __main__.py  schema.py
src/agent_society/agents/: actions.py  adventurer.py  needs.py  player.py  raider.py  roles.py  selection.py  society.py  travel_planner.py
src/agent_society/config/: balance.py  parameters.py
src/agent_society/economy/: __init__.py  config.py  equilibrium.py  exchange.py  flows.py  goods.py  routing.py  trade.py
src/agent_society/events/: bus.py  catalog.py  generator.py  handlers.py  types.py
src/agent_society/factions/: __init__.py  registry.py  reputation.py
src/agent_society/game/: __init__.py  dice.py
src/agent_society/llm/: __init__.py  base.py  hf_backend.py  mock_backend.py  ollama_backend.py  prompts.py
src/agent_society/player/: __init__.py  (+3 more)
tests/: conftest.py
tests/unit/: test_adventurer.py  test_dice.py  test_events.py  test_factions.py  test_lairs.py  test_needs.py  test_pieces.py  test_player.py  test_player_dice.py  test_quests.py  test_roads.py  test_territory_biomes.py  test_tiles.py  test_world.py
(+25 files in other folders)
